feat: successfully repro'd our issue

--- a/ui/package.json
+++ b/ui/package.json
@@ -2,5 +2,9 @@
   "name": "~ui",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
