--- a/storybook/package.json
+++ b/storybook/package.json
@@ -21,7 +21,8 @@
     "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ts-loader": "^9.4.2"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
