(ts-loader): it works!

--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^18.0.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
