--- a/storybook/package.json
+++ b/storybook/package.json
@@ -22,7 +22,7 @@
     "babel-loader": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-loader": "^9.4.2"
+    "ts-loader": "8.2.0"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
